rosy: overlay: Enable display burn-in-protection in Ambient Display
Signed-off-by: rayrzy <vincentrayananda@gmail.com>
Change-Id: Ia91b304d5f528c501a64103b3cb96439acbc2081

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -617,4 +617,7 @@
 
     <!-- Whether or not we should show vendor mismatch message -->
     <bool name="config_show_vendor_mismatch_message">false</bool>
+
+    <!-- If true, the display will be shifted around in ambient mode. -->
+    <bool name="config_enableBurnInProtection">true</bool>
 </resources>
