rosy: overlay: Let's really fix the flicker issue this time
This reverts commit a7d031553d107a6daf5277a685d9f8a179d05b5a.

Signed-off-by: rayrzy <vincentrayananda@gmail.com>

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -438,7 +438,7 @@
     <bool name="config_dozeAlwaysOnEnabled">false</bool>
 
      <!-- Whether the display blanks itself when transitioning from a doze to a non-doze state -->
-    <bool name="config_displayBlanksAfterDoze">false</bool>
+     <bool name="config_displayBlanksAfterDoze">true</bool>
 
     <!-- Configure mobile tcp buffer sizes in the form:
          rat-name:rmem_min,rmem_def,rmem_max,wmem_min,wmem_def,wmem_max
